<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rc_genicam_driver</name>
  <version>0.1.1</version>
  <description>Driver for rc_visard sensor from Roboception GmbH</description>
  <maintainer email="heiko.hirschmueller@roboception.de">hirschmu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>image_transport</depend>
  <depend>rc_common_msgs</depend>
  <depend>rc_genicam_api</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cppcheck</test_depend>
  <test_depend>ament_cmake_xmllint</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
